fix img style on mobile first, add footer component

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,31 +1,20 @@
 
 .main__first-container{
-    height: 60vh;
-    padding: .5rem;
-    margin: 0 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding-top: 25rem; */
-    margin-top: 5rem;
-    /* opacity: 0.9; */
-    /* background-image: url("../../img/Terapia_2.webp"); */
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-image: url("../../img/SaludMental_1.svg");
+    margin: 3rem 0;
 }
 
 .main__title{
-    margin-top: 15rem;
+    margin-top: 2rem;
     font-family: 'Roboto Condensed',sans-serif;
     font-size: 4rem;
     color: #0079D3;
-    /* text-align: center; */
     animation: ease-in 2s;
 }
 
 .main__description{
-    margin-top: 1rem;
     font-size: 3rem;
     text-align: center;
 }
@@ -33,7 +22,14 @@
 .main__therapy-img{
     width: 100vw;
 }
-
+.main__basic-description{
+    text-align: center;
+    font-size: 2rem;
+    margin: 0 2rem
+}
+.main__basic-description p{
+    margin-top: 1rem;
+}
 .main__second-container{
     background-image: url("../../img/Terapia_4.webp");
     background-repeat: no-repeat;
@@ -67,10 +63,10 @@
 }
 .button__comoFunciona{
     margin-top: 7rem;
-    background-color: #1c9be4;
+    background-color: #0d95f0;
 }
 .button__buscarPsicologo{
-    background-color: #2796eb;
+    background-color: #0d95f0;
 }
 .button__soyPsicologo{
     background-color: #0d95f0;
